<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:text="@string/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="41dp"
            android:id="@+id/textView3"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/assistant_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/textView2"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/open_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/open_sub"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/alert"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/open_sub"
        android:layout_toLeftOf="@+id/open_sub"
        android:layout_toStartOf="@+id/open_sub" />

    <TextView
        android:text="@string/dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginLeft="29dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/dial_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="20dp"
        android:id="@+id/textView8"
        android:textSize="12sp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="25dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:text="@string/search_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="20dp"
        android:id="@+id/textView10"
        android:textSize="12sp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:text="@string/time_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="13dp"
        android:textSize="12sp"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/textView12" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView11"
        android:layout_marginTop="13dp"
        android:layout_above="@+id/textView12"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />


</RelativeLayout>